name:                graphUVA
version:             0.1.0.0
synopsis:            Mines UVa People Search (http://www.virginia.edu/search/)
license:             GPL-2
license-file:        LICENSE.md
author:              Jasdev Singh, Nishant Shukla
maintainer:          nick722@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable main
  main-is:             main.hs
  build-depends:       base ==4.6.*,
                       http-conduit >=1.9,
                       hxt >=9.3,
                       json >=0.7,
                       network >=2.4.1.2,
                       HTTP >=4000