name:                graphUVA
version:             0.1.0.0
synopsis:            Downloading and parsing HTML from UVA people search
author:              Nishant Shukla
category:            Text
build-type:          Simple
cabal-version:       >=1.8

executable main
  main-is:             main.hs
  build-depends:       base ==4.6.*,
                       HTTP >=4000.2,
                       hxt >=9.2,
                       json >=0.7,
                       network >=2.4.1.2
		       